@@ -30,6 +30,7 @@ my %SKIP_TESTS = (
     'test06' => ($] >= 5.008) ? 0 : "needs perl >= 5.8",
     'test15' => ($] < 5.008)  ? 0 : "needs perl < 5.8",
     'test16' => ($] >= 5.010) ? 0 : "needs perl >= 5.10",
+    'test30-fork' => ($^O ne "MSWin32") ? 0 : "doesn't work with fork() emulation",
 );
 
 my %opts = (
@@ -99,7 +100,8 @@ if ($opts{v}) {
     print "nytprofcvs: $nytprofcsv\n";
 }
 
-ok(-x $nytprofcsv, "Where's nytprofcsv?");
+# Windows emulates the executable bit based on file extension only
+ok($^O eq "MSWin32" ? -f $nytprofcsv : -x $nytprofcsv, "Where's nytprofcsv?");
 
 # run all tests in various configurations
 for my $leave (@test_opt_leave) {
